# NZPrihod

./: .clang-format  .gitignore  CMakeLists.txt  CustomListView.qml  KeywordsConfiguration.qml  MainMenuSideBar.qml  MainPage.qml  MatchModel.cpp  MatchModel.h  PrintConfiguration.qml  TemplateConfiguration backup.qml  TemplateConfiguration.qml  TemplateMatchConditions.qml  TemplatePropertiesBackup.qml  TemplatePropertyParse.qml  barcodeanalyzer.cpp  barcodeanalyzer.h  barcodelist.cpp  fullmaterialtemplate.h  keywordtemplate.h  main.cpp  main.qml  mybarcodeinfo.h  printtemplate.cpp  printtemplate.h  windeployqt.bat
Core/Include/: BarcodesModel.h  FieldListModel.h  FieldTableModel.h  FieldTableModelb.h  KeywordsModel.h  MatchModel.h  MyCamera.h  MyImageProvider.h  PersonModel.h  PrintTableModel.h  barcodeanalyzer.h  barcodelist.h  mybarcodeinfo.h
Core/Src/: BarcodesModel.cpp  FieldListModel.cpp  FieldTableModel.cpp  FieldTableModelb.cpp  KeywordsModel.cpp  MatchModel.cpp  MyCamera.cpp  PersonModel.cpp  PrintTableModel.cpp  barcodeanalyzer.cpp  main.cpp  mybarcodeinfo.cpp
Libs/Misc/: TemplateProperties.qml  TemplatePropertyRecognition.qml  TemplatesSideBar.qml  fullmaterialtemplate.cpp  keywordtemplate.cpp  opencvimageprovider.h
appdata/keywords/: keywords - Copy.json  keywords.json
appdata/printlabels/: label1.json  label2.json  newLabel.json
appdata/templates/: murata.json  murata_match.json  new_template.json  notmurata.json  notmuratabmp  notmurataparse.json
keywords/: keywords.json
not used/: ComboBox.ui.qml  MainPageToolBar.ui.qml  MainPageToolBarDelegate.ui.qml  MainPageToolBarModel.qml  hikcamera.cpp  hikcamera.h  hikcamera1.cpp  hikcamera1.h  mvs_project.mcfg
qml/: CustomPageHeader.qml  ExtractionListView.ui.qml  ExtractionListViewDelegate.ui.qml  ExtractionListViewModel.qml  FieldTable.qml  KeywordsConfiguration.qml  MainPage copy.qml  MainPage.qml  MainPageButton.ui.qml  PrintConfiguration.qml  PrintSizeForm.ui.qml  TemplateConfiguration.qml  TemplateMatchConditions.qml  main.qml  printtable.qml
templates/: murata.json  murata_match.json  notmurata.json  notmurataparse.json
